@@ -7,6 +7,8 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.Date;
+import java.util.List;
+
 import static org.junit.jupiter.api.Assertions.*;
 
 public class RouteTest {
@@ -40,28 +42,33 @@ public class RouteTest {
 
     @Test
     public void testGetAndSetPath() {
-        Route.Coordinate coordinate = new Route.Coordinate();
-        coordinate.setLatitude(10.0);
-        coordinate.setLongitude(20.0);
-        route.setPath(Arrays.asList(coordinate));
-        assertEquals(1, route.getPath().size());
-        assertEquals(10.0, route.getPath().get(0).getLatitude());
-        assertEquals(20.0, route.getPath().get(0).getLongitude());
+        CustomLineString customLineString = new CustomLineString();
+        customLineString.setCoordinates(List.of(List.of(10.0, 20.0)));
+        route.setPath(customLineString);
+        assertEquals(1, route.getPath().getCoordinates().size());
+        assertEquals(10.0, route.getPath().getCoordinates().get(0).get(0));
+        assertEquals(20.0, route.getPath().getCoordinates().get(0).get(1));
     }
 
     @Test
     public void testGetAndSetPointsOfInterest() {
         Route.PointOfInterest poi = new Route.PointOfInterest();
         poi.setName("Point of Interest");
-        Route.Coordinate coordinate = new Route.Coordinate();
-        coordinate.setLatitude(30.0);
-        coordinate.setLongitude(40.0);
-        poi.setCoordinates(coordinate);
+        CustomPoint customPoint = new CustomPoint();
+        customPoint.setCoordinates(List.of(30.0, 40.0));
+        poi.setPoint(customPoint);
         route.setPointsOfInterest(Arrays.asList(poi));
+
         assertEquals(1, route.getPointsOfInterest().size());
         assertEquals("Point of Interest", route.getPointsOfInterest().get(0).getName());
-        assertEquals(30.0, route.getPointsOfInterest().get(0).getCoordinates().getLatitude());
-        assertEquals(40.0, route.getPointsOfInterest().get(0).getCoordinates().getLongitude());
+
+        assertNotNull(route.getPointsOfInterest());
+        assertNotNull(route.getPointsOfInterest().get(0).getPoint());
+        assertNotNull(route.getPointsOfInterest().get(0).getPoint().getCoordinates());
+        assertEquals(30.0,
+                route.getPointsOfInterest().get(0).getPoint().getCoordinates().get(0));
+        assertEquals(40.0,
+                route.getPointsOfInterest().get(0).getPoint().getCoordinates().get(1));
     }
 
     @Test
